# fastapi-docker-compose-test

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
