[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["trinkes <fabiojscosta1583@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
